# AstraRoulett

./: Dockerfile  README.md  app.py  docker-compose.yaml  pyproject.toml
core/: config.py  revolver.py
core/db/: mongo_manager.py  mongo_models.py
core/logging/: log_handler.py  log_settings.py
tests/: test_revolver.py
web/: api.py  index.py  stats.py
web/static/css/: social.css
web/static/js/: transactions_table.js
web/templates/: base.html  header.html
web/templates/pages/: admin_logs.html  index.html  new_revolver.html  players.html  revolvers.html  session.html
